--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,662 +1,15 @@
-@import "utils/variables.scss";
-@import "utils/mixins";
-@import "utils/animations";
-@import "base/boxsizing";
-@import "base/typographie";
-@import "components/buttons";
-@import "components/loading-spinner";
-@import "layout/body";
-@import "layout/header";
-@import "layout/footer";
-@import "pages/index";
+@import "../sass/utils/variables";
+@import "../sass/utils/mixins";
+@import "../sass/utils/animation";
+@import "../sass/base/boxsizing";
+@import "../sass/base/typographie";
+@import "../sass/components/button";
+@import "../sass/components/loading";
+@import "../sass/layout/body";
+@import "../sass/layout/header";
+@import "../sass/layout/footer";
+@import "../sass/pages/index";
 @import "../sass/pages/page-menu";
-
-**************************************
-
-* {
-    font-family: "Roboto", sans-serif;
-    box-sizing: border-box;
-    margin: 0px;
-  }
-  
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-
-**************************************
-
-/* <!-- LOADER --> */
-
-.loader {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 210%;
-    background-color: $white;
-    opacity: 0.92;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-/* *************** penser à mettre le loader en dessous en media queri**********************
-  */
-.loader-quart {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    margin-bottom: 150px;
-    margin-right: 40px;
-    border-radius: 50px;
-    border: 6px solid #9356dc;
-    opacity: 0.8;
-  
-  &:after {
-    position: absolute;
-    top: -6px;
-    left: -6px;
-    right: -6px;
-    bottom: -6px;
-    content: "";
-    border: 6px solid transparent;
-    border-radius: 50px;
-    border-top-color: #99e2d0;
-    animation: spin 1s linear infinite;
-  }
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.letter {
-    color: $color-secondary;
-    font-size: 80px;
-    letter-spacing: 15px;
-    margin-bottom: 150px;
-    animation: flash 1.2s linear infinite;
-
-    &:nth-child(1) {
-        animation-delay: 0.1s;
-    }
-    &:nth-child(2) {
-        animation-delay: 0.2s;
-    }
-    &:nth-child(3) {
-        animation-delay: 0.3s;
-    }
-    &:nth-child(4) {
-        animation-delay: 0.4s;
-    }
-    &:nth-child(5) {
-        animation-delay: 0.5s;
-    }
-    &:nth-child(6) {
-        animation-delay: 0.6s;
-    }
-    &:nth-child(7) {
-        animation-delay: 0.7s;
-    }
-}
-
-@keyframes flash {
-  0% {
-    color: #9356dc;
-    text-shadow: 0 0 7px #9356dc;
-  }
-  90% {
-    color: #ff79da;
-    text-shadow: none;
-  }
-  99% {
-    color: #9356dc;
-    text-shadow: 0 0 7px #9356dc;
-    z-index: 21;
-  }
-  100% {
-    /*faire disparaitre l'animation sur la fin*/
-    opacity: 0;
-    z-index: -1;
-  }
-}
-
-**************************************
-
-// <!-- HEADER -->
-
-.header {
-    padding: 2%;
-  
-    &__logo {
-        margin: 0;
-        font-size: 32px;
-        text-align: center;
-        font-family: shrikhand;
-      }
-
-    &__returnarrow {
-        position: absolute;
-        padding-top: 10px;
-        padding-left: 15px;
-        font-size: 20px;
-        color: #353535;
-    }
-}
-
-**************************************
-  
-  /* <!-- INFO-LOCALISATION --> */
-  
-  .info-localisation {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50px;
-    gap: 17px;
-    border: 1px solid #eaeaea;
-    background-color: #eaeaea;
-    box-shadow: 3px 2px 7px 1px grey;
-    font-weight: 500;
-  }
-  
-  /* <!-- SEARCH-RESTAURANTS --> */
-  
-  .search-restaurants {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    /* margin: auto >>> à tester */
-    padding: 20px 0px;
-    background-color: #f6f6f6;
-    text-align: center;
-  
-      &__heading {
-        width: 70%;
-        /* à tester pour aller à la ligne */
-        margin: 10px 0px;
-      }
-  
-      & p {
-        width: 85%;
-        font-size: 18px;
-        font-weight: 300;
-      }
-    }
-  
-  .button-gradient {
-    border-radius: 50px;
-    color: white;
-    background: linear-gradient(#ff79da, #9356dc);
-    font-size: 16px;
-    margin: 30px 0px;
-    padding: 10px 20px;
-    height: 50px;
-    border: none;
-    box-shadow: 0px 4px 10px 0px rgb(166, 133, 133);
-    cursor: pointer;
-    transition: 300ms ease-in-out;
-  
-    &:hover {
-      opacity: 0.8;
-      box-shadow: 0px 4px 15px 2px rgb(166, 133, 133);
-    }
-}
-  
-  /* <!-- OPERATION --> */
-  
-  .explain-operation {
-    /* margin: auto; */
-    padding: 50px 0px;
-
-    &__heading {
-      margin: 10px 0px;
-      padding-left: 15px;
-    }
-    &__list {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-      width: 90%;
-      padding-bottom: 20px;
-      margin: auto;
-    }
-}
-  .explain-step {
-    display: flex;
-    align-items: center;
-    height: 70px;
-    gap: 4%;
-    margin: 15px 0px;
-    background-color: #f6f6f6;
-    border-radius: 20px;
-    box-shadow: 0px 4px 15px 0px #d5d5d5;
-    transition: background-color 300ms ease-in-out;
-  
-    &:hover {
-      background-color: #f0eded;
-    
-      & > .explain-step__icon {
-        color: #9356dc;
-      }
-    }
-    
-    &__number {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      left: -10px;
-      height: 24px;
-      width: 24px;
-      border-radius: 50px;
-      background-color: #9356dc;
-      color: white;
-    }
-    
-    &__icon {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 20px;
-      height: 25px;
-      color: #7e7e7e;
-      /* transition au survol vers le rose */
-    }
-    
-    &__instruction {
-      font-weight: 500;
-    }
-}
-  
-  /* <!-- RESTAURANTS-LIST --> */
-  
-  .list-restaurants {
-    display: flex;
-    flex-direction: column;
-    /* margin: auto; */
-    padding: 50px 15px 50px 15px;
-    background-color: #f6f6f6;
-  
-  
-    &__heading {
-      padding-bottom: 20px;
-    }
-    
-    &__container {
-      width: 100%;
-    }
-}
-  
-  .restaurant-card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    height: 251px;
-    margin-bottom: 5%;
-    /* (espacement entre les cards) */
-    border-radius: 15px;
-    background-color: white;
-    transition: 300ms, ease-in-out;
-
-    &:hover {
-      background-color: #f0eded;
-    }
-    
-    &__image {
-      position: relative;
-    
-      & img {
-        width: 100%;
-        height: 175px;
-        object-fit: cover;
-        border-radius: 15px 15px 0px 0px;
-      }
-      
-      &--new {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: absolute;
-        right: 15px;
-        top: 12px;
-        width: 80px;
-        height: 29px;
-        border-radius: 2px;
-        font-size: 14px;
-        background-color: #99e2d0;
-        color: #008766;
-      }
-  }
-  
-  &__info {
-    padding: 15px;
-  
-  
-    &__text {
-      width: 90%;
-    }
-    
-    & h3 {
-      margin: 0px;
-      font-size: 18px;
-    }
-    
-    & p {
-      font-weight: 300;
-      font-size: 17px;
-      margin-top: 3px;
-    }
-}
-  
-  &__like {
-    position: absolute;
-    bottom: 10%;
-    right: 5%;
-    padding-right: 20px;
-    padding-bottom: 25px;
-  }
-}
-  
-  .button-like {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    font-size: 24px;
-  
-    & i {
-      position: absolute;
-    }
-}
-  
-  .animheartsolid {
-    opacity: 0;
-    transition: all 500ms ease-in-out;
-  
-  
-    &:hover {
-      opacity: 1;
-      color: transparent;
-      background-image: linear-gradient(#9356dc, #ff79da);
-      background-clip: text;
-    }
-  }
-
-  **************************************
-
-  /* FADE-IN-PAGE-MENU */
-
-.fade-in--0delay {
-  animation: fade-in 2s 0ms both;
-
-
-  &--1delay {
-    animation: fade-in 2s 1000ms both;
-  }
-
-  &--2delay {
-    animation: fade-in 2s 1500ms both;
-  }
-}
-
-@keyframes fade-in {
-  0% {
-    transform: translateY(50px);
-    opacity: 0;
-  }
-  75% {
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(0px);
-    animation-timing-function: ease-in-out;
-  }
-}
-
-**************************************
-/* <!-- PAGE-MENU--> */
-
-.page-restaurant-image {
-    position: relative;
-    width: 100%;
-    height: 275px;
-
-    // @include desktop-responsive {
-    //     height: 400px;
-    // }
-
-    & img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-}
-
-.menu {
-    position: relative;
-    top: -20px;
-    margin-bottom: -20px;
-    padding-left: 10px;
-    background-color: #f6f6f6;
-    border-radius: 25px 25px 0px 0px;
-
-    &__headind {
-        display: flex;
-        align-items: center;
-
-        & h2 {
-            width: 85%;
-            padding-top: 20px;
-            font-family: 'Shrikhand', cursive;
-            // @include cursive-heading;
-        }
-    }
-
-    &__button-order {
-        display: flex;
-        justify-content: center;
-    }
-}
-
-.button-gradient {
-        border-radius: 50px;
-        color: white;
-        background: linear-gradient(#ff79da, #9356dc);
-        font-size: 16px;
-        margin: 30px 0px;
-        padding: 10px 20px;
-        height: 50px;
-        border: none;
-        box-shadow: 0px 4px 10px 0px rgb(166, 133, 133);
-        cursor: pointer;
-        transition: 300ms ease-in-out;
-      
-        &__:hover {
-            opacity: 0.8;
-            box-shadow: 0px 4px 15px 2px rgb(166, 133, 133);
-            }
-    }
-
-**************************************
-/* <!-- LIST-CARD --> */
-
-.course-list {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    &__heading {
-        position: relative;
-        margin: 4% 0% 2% 0%;
-        padding: 10px 0px;
-        font-size: 18px;
-        font-weight: 300;
-        text-transform: uppercase;
-        // écrit en majuscule
-
-      &::after {
-        display: block;
-        position: absolute;
-        bottom: 2px;
-        content: "";
-        width: 40px;
-        height: 4px;
-        background-color: #99e2d0;
-      }
-  }
-}
-
-.course-card {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: 10px 0px;
-    padding: 0;
-    background-color: white;
-    border-radius: 15px;
-    box-shadow: 0px 4px 15px 0px #d5d5d5;
-    overflow: hidden;
-    cursor: pointer;
-
-    &:hover > .course-card__select-button {
-      margin-right: 0px;
-    }
-
-    &:hover > .course-card__select-button::after {
-      transform: rotate(360deg);
-    }
-
-   &__info {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: 2%;
-    gap: 2%;
-    white-space: nowrap;
-    // passages à la ligne automatique supprimés
-    overflow: hidden;
-    text-overflow: ellipsis;
-    // couper la fin des mots avec 3...
-   }
-
-   &__description {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 100%;
-    padding: 5px;
-
-        & h4 {
-            margin: 0;
-            font-size: 16px;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-
-        & p {
-            margin: 0;
-            font-size: 15px;
-            font-weight: 300;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-    }
-
-    &__price {
-        display: flex;
-        align-items: flex-end;
-        width: 15%;
-        padding: 5px;
-        font-weight: 700;
-
-        & p {
-            margin: 0;
-        }
-    }
-
-    &__select-button {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: auto;
-        width: 20%;
-        margin-right: -20%;
-        border-radius: 0px 15px 15px 0px;
-        background-color: #99E2D0;
-        transition: margin-right 800ms ease-in-out;
-
-          &::after {
-            display: inline-block;
-            font-weight: 900;
-            font-size: 25px;
-            content: "Icon:check";
-            color: white;
-            transition: transform 800ms ease-in-out;
-          }
-    }
-}
-
-**************************************
-// <!-- FOOTER -->
-
-footer {
-    width: 100%;
-    padding: 16px;
-    background-color: #353535;
-    // essayer background-color: darken($white, 75%);
-    color: white;
-
-
-    &__heading {
-        margin: 0px 0px 10px 0px;
-        font-family: 'Shrikhand';
-        font-size: 18px;
-    }
-  
-    &__nav {
-        display: flex;
-        align-items: none;
-        font-size: 16px;
-    
-        & p {
-            padding-top: 5px;
-            }
-
-        &__icons {
-            margin-right: 15px;
-            padding-top: 15px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 11px;
-            height: 13px;
-            color: white;
-        }
-    }
-    
-    &__info {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        font-size: 16px;
-        padding-top: 10px;
-    }
-}
 
 
 
