--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,15 +1,18 @@
+
+
+/* <!-- BUTTON GRADIENT --> */
+
 .button-gradient {
     margin: 30px 0px;
-    padding: 10px 20px;
+    padding: 1% 4%;
+    // ou 10px, 20px
     height: 50px;
     border: none;
     border-radius: 50px;
     @include gradient;
-    // background: linear-gradient(#ff79da, #9356dc);
-    color: white;
+    color: $white;
     font-size: 16px;
-    @include box-shadow;
-    // box-shadow: 0px 4px 10px 0px rgb(166, 133, 133);
+    box-shadow: 0px 4px 15px 0px rgb(166, 133, 133);
     cursor: pointer;
     transition: 300ms ease-in-out;
   
@@ -17,7 +20,11 @@
         opacity: 0.8;
         box-shadow: 0px 4px 15px 2px rgb(166, 133, 133);
     }
+
 }
+
+/* <!-- BUTTON LIKE --> */
+
 
 .button-like {
     background-color: transparent;
@@ -40,7 +47,7 @@
         -webkit-background-clip: text;
         /* necessaire pour le navigateur chrome */
         color: transparent;
-        @include gradient;
-        // background-image: linear-gradient(#9356dc, #ff79da);
+        @include gradient-reverse;
     }
+    
 }
