--- a/sass/components/_loading.scss
+++ b/sass/components/_loading.scss
@@ -7,20 +7,35 @@
     width: 100%;
     height: 100%;
     background-color: $white;
+    opacity: 0.92;
+    z-index: 1;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    animation: disappear 3s both ease-in-out;
+
+    @include tablet-responsive {
+        flex-direction: row;
+    }
 }
 
+  
 .loader-quart {
     position: relative;
+    display: block;
     width: 60px;
     height: 60px;
     margin-bottom: 150px;
-    margin-right: 40px;
     border-radius: 50px;
-    border: 6px solid #9356dc;
+    border: 6px solid $color-primary;
     opacity: 0.8;
+
+    @include tablet-responsive {
+        margin-left: 20px;
+        margin-bottom: 0;
+    }
+    
   
   &:after {
     position: absolute;
@@ -31,17 +46,17 @@
     content: "";
     border: 6px solid transparent;
     border-radius: 50px;
-    border-top-color: #99e2d0;
+    border-top-color: $color-tertiary;
     animation: spin 1s linear infinite;
   }
 }
   
 .letter {
     color: $color-secondary;
-    font-size: 80px;
-    letter-spacing: 15px;
+    font-size: 65px;
+    letter-spacing: 2px;
     margin-bottom: 150px;
-    animation: flash 1.2s linear infinite;
+    animation: flash 1.2s linear 3s infinite;
 
     &:nth-child(1) {
         animation-delay: 0.1s;
@@ -64,6 +79,12 @@
     &:nth-child(7) {
         animation-delay: 0.7s;
     }
+
+    @include tablet-responsive {
+        font-size: 80px;
+        letter-spacing: 15px;
+    }
+    
 }
 
 
