--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,9 +1,8 @@
 
-footer {
+.footer {
     width: 100%;
     padding: 16px;
-    background-color: #353535;
-    // essayer background-color: darken($white, 75%);
+    background-color: darken($white, 80%);
     color: $white;
 
     @include tablet-responsive {
@@ -18,7 +17,7 @@ footer {
         margin: 0px 0px 10px 0px;
         @include cursive-heading;
         font-size: 18px;
-
+        
         @include tablet-responsive {
             padding-top: 80px;
             padding-left: 70px;
@@ -30,8 +29,15 @@ footer {
         display: flex;
         align-items: none;
         font-size: 16px;
-    }
-  
+    
+        & p {
+            padding-top: 5px;
+
+            @include tablet-responsive {
+                padding-top: 85px;
+            }
+        }
+
         &__icons {
             margin-right: 15px;
             padding-top: 15px;
@@ -40,7 +46,7 @@ footer {
             align-items: center;
             width: 11px;
             height: 13px;
-            color: white;
+            color: $white;
 
             @include tablet-responsive {
                 margin-right: 15px;
@@ -48,15 +54,8 @@ footer {
                 padding-top: 95px;
             }
         }
-
-    &__nav p {
-    padding-top: 5px;
-
-    @include tablet-responsive {
-        padding-top: 85px;
     }
-    }
-  
+
     &__info {
         display: flex;
         flex-direction: column;
