--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,4 @@
+
 .header {
     padding: 2%;
   
@@ -6,5 +7,13 @@
         font-size: 32px;
         text-align: center;
         @include cursive-heading;
+    }
+
+    &__returnarrow {
+        position: absolute;
+        padding-top: 10px;
+        padding-left: 15px;
+        font-size: 20px;
+        color: darken($white, 80%);
     }
   }
