--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,29 +1,32 @@
 
-/* Gradient */
+/* <!-- GRADIENT --> */
 
 @mixin gradient {
-    background-image: linear-gradient(#9356dc, #ff79da);
+    background-image: linear-gradient($degree, $color-secondary, $color-primary);
 }
 
-
-/* Shadow */
-
-@mixin box-shadow ($color: $shadow) {
-    box-shadow: 0px 4px 15px 0px $shadow;
+@mixin gradient-reverse {
+    background-image: linear-gradient($degree, $color-primary, $color-secondary);
 }
 
+/* <!-- SHADOW --> */
 
-/* Responsive */
+// @mixin box-shadow ($color: $shadow) {
+//     box-shadow: 0px 4px 15px 0px $shadow;
+// }
+
+
+/* <!-- RESPONSIVE --> */
 
 @mixin tablet-responsive {
-    @media screen and (min-width: ($breakpoints, tablet)){
+    @media screen and (min-width: $breakpointstablet){
         @content;
     }
 }
 
 
 @mixin desktop-responsive {
-    @media screen and (min-width: ($breakpoints, desktop)){
+    @media screen and (min-width: $breakpointsdesktop){
         @content;
     }
 }
