--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,80 @@
+@charset "UTF-8";
+/* <!-- COLORS --> */
+/* <!-- GRADIENT --> */
+/* <!-- DEGREE GRADIENT --> */
+/* <!-- RESPONSIVE --> */
+/* <!-- GRADIENT --> */
+/* <!-- SHADOW --> */
+/* <!-- RESPONSIVE --> */
+/* <!-- LOADER --> */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes flash {
+  0% {
+    color: #9356dc;
+    text-shadow: 0 0 7px #9356dc;
+  }
+  90% {
+    color: #FF79DA;
+    text-shadow: none;
+  }
+  100% {
+    color: #9356dc;
+    text-shadow: 0 0 7px #9356dc;
+  }
+}
+@keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    z-index: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -20;
+  }
+}
+/* <!-- FADE-IN-PAGE-MENU --> */
+@keyframes fade-in {
+  0% {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0px);
+    animation-timing-function: ease-in-out;
+  }
+}
+.fade-in--1delay {
+  animation: fade-in 2s 0ms both;
+}
+
+.fade-in--2delay {
+  animation: fade-in 2s 1000ms both;
+}
+
+.fade-in--3delay {
+  animation: fade-in 2s 1500ms both;
+}
+
 * {
-  font-family: "Roboto", sans-serif;
   box-sizing: border-box;
   margin: 0px;
+}
+
+/* <!-- GENERAL --> */
+* {
+  font-family: "Roboto", sans-serif;
 }
 
 a {
@@ -9,40 +82,90 @@ a {
   color: inherit;
 }
 
-**************************************
+/* <!-- GENERAL FONT TEXT --> */
+/* <!-- HEADING --> */
+/* <!-- BUTTON GRADIENT --> */
+.button-gradient {
+  margin: 30px 0px;
+  padding: 1% 4%;
+  height: 50px;
+  border: none;
+  border-radius: 50px;
+  background-image: linear-gradient(165deg, #FF79DA, #9356dc);
+  color: #ffffff;
+  font-size: 16px;
+  box-shadow: 0px 4px 15px 0px rgb(166, 133, 133);
+  cursor: pointer;
+  transition: 300ms ease-in-out;
+}
+.button-gradient:hover {
+  opacity: 0.8;
+  box-shadow: 0px 4px 15px 2px rgb(166, 133, 133);
+}
 
-/* <!-- LOADER --> */
+/* <!-- BUTTON LIKE --> */
+.button-like {
+  background-color: transparent;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+.button-like i {
+  position: absolute;
+}
+
+.animheartsolid {
+  opacity: 0;
+  transition: all 500ms ease-in-out;
+}
+.animheartsolid:hover {
+  opacity: 1;
+  background-clip: text;
+  -webkit-background-clip: text;
+  /* necessaire pour le navigateur chrome */
+  color: transparent;
+  background-image: linear-gradient(165deg, #9356dc, #FF79DA);
+}
 
 .loader {
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   width: 100%;
-  height: 210%;
-  background-color: white;
+  height: 100%;
+  background-color: #ffffff;
   opacity: 0.92;
   z-index: 1;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  animation: disappear 3s both ease-in-out;
 }
-
-/* *************** penser à mettre le loader en dessous en media queri**********************
-  */
+@media screen and (min-width: 768px) {
+  .loader {
+    flex-direction: row;
+  }
+}
 
 .loader-quart {
   position: relative;
+  display: block;
   width: 60px;
   height: 60px;
   margin-bottom: 150px;
-  margin-right: 40px;
   border-radius: 50px;
   border: 6px solid #9356dc;
   opacity: 0.8;
 }
-
+@media screen and (min-width: 768px) {
+  .loader-quart {
+    margin-left: 20px;
+    margin-bottom: 0;
+  }
+}
 .loader-quart:after {
   position: absolute;
   top: -6px;
@@ -52,48 +175,17 @@ a {
   content: "";
   border: 6px solid transparent;
   border-radius: 50px;
-  border-top-color: #99e2d0;
+  border-top-color: #99E2D0;
   animation: spin 1s linear infinite;
 }
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
 .letter {
-  color: #ff79da;
-  font-size: 80px;
-  letter-spacing: 15px;
+  color: #FF79DA;
+  font-size: 65px;
+  letter-spacing: 2px;
   margin-bottom: 150px;
   animation: flash 1.2s linear 3s infinite;
 }
-
-@keyframes flash {
-  0% {
-    color: #9356dc;
-    text-shadow: 0 0 7px #9356dc;
-  }
-  90% {
-    color: #ff79da;
-    text-shadow: none;
-  }
-  99% {
-    color: #9356dc;
-    text-shadow: 0 0 7px #9356dc;
-    z-index: 21;
-  }
-  100% {
-    /*faire disparaitre l'animation sur la fin*/
-    opacity: 0;
-    z-index: -1;
-  }
-}
-
 .letter:nth-child(1) {
   animation-delay: 0.1s;
 }
@@ -115,29 +207,106 @@ a {
 .letter:nth-child(7) {
   animation-delay: 0.7s;
 }
+@media screen and (min-width: 768px) {
+  .letter {
+    font-size: 80px;
+    letter-spacing: 15px;
+  }
+}
 
-**************************************
+body {
+  width: 100%;
+}
 
-/* <!-- HEADER --> */
-
-  .header {
+.header {
   padding: 2%;
 }
 .header__logo {
   margin: 0;
   font-size: 32px;
   text-align: center;
-  font-family: shrikhand;
+  font-family: "Shrikhand";
 }
 .header__returnarrow {
   position: absolute;
   padding-top: 10px;
   padding-left: 15px;
   font-size: 20px;
-  color: #353535;
+  color: #333333;
 }
 
-**************************************
+.footer {
+  width: 100%;
+  padding: 16px;
+  background-color: #333333;
+  color: #ffffff;
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding-top: 0;
+    padding-right: 60px;
+  }
+}
+.footer__heading {
+  margin: 0px 0px 10px 0px;
+  font-family: "Shrikhand";
+  font-size: 18px;
+}
+@media screen and (min-width: 768px) {
+  .footer__heading {
+    padding-top: 80px;
+    padding-left: 70px;
+    order: 5;
+  }
+}
+.footer__nav {
+  display: flex;
+  align-items: none;
+  font-size: 16px;
+}
+.footer__nav p {
+  padding-top: 5px;
+}
+@media screen and (min-width: 768px) {
+  .footer__nav p {
+    padding-top: 85px;
+  }
+}
+.footer__nav__icons {
+  margin-right: 15px;
+  padding-top: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 11px;
+  height: 13px;
+  color: #ffffff;
+}
+@media screen and (min-width: 768px) {
+  .footer__nav__icons {
+    margin-right: 15px;
+    margin-left: 15px;
+    padding-top: 95px;
+  }
+}
+.footer__info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-size: 16px;
+  padding-top: 10px;
+}
+@media screen and (min-width: 768px) {
+  .footer__info {
+    flex-direction: row;
+    gap: 25px;
+    padding-top: 85px;
+    padding-left: 50px;
+  }
+}
 
 /* <!-- INFO-LOCALISATION --> */
 .info-localisation {
@@ -150,62 +319,53 @@ a {
   border: 1px solid #eaeaea;
   background-color: #eaeaea;
   box-shadow: 3px 2px 7px 1px grey;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 /* <!-- SEARCH-RESTAURANTS --> */
-
 .search-restaurants {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* margin: auto >>> à tester */
   padding: 20px 0px;
-  background-color: #f6f6f6;
+  background-color: whitesmoke;
   text-align: center;
 }
-
 .search-restaurants__heading {
   width: 70%;
   /* à tester pour aller à la ligne */
   margin: 10px 0px;
 }
-
+@media screen and (min-width: 768px) {
+  .search-restaurants__heading {
+    margin-bottom: 25px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .search-restaurants__heading {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+}
 .search-restaurants p {
   width: 85%;
   font-size: 18px;
   font-weight: 300;
 }
 
-.button-gradient {
-  border-radius: 50px;
-  color: white;
-  background: linear-gradient(#ff79da, #9356dc);
-  font-size: 16px;
-  margin: 30px 0px;
-  padding: 10px 50px;
-  height: 50px;
-  border: none;
-  box-shadow: 0px 4px 10px 0px rgb(166, 133, 133);
-  cursor: pointer;
-  transition: 300ms ease-in-out;
-}
-
-.button-gradient:hover {
-  opacity: 0.8;
-  box-shadow: 0px 4px 15px 2px rgb(166, 133, 133);
-}
-
 /* <!-- OPERATION --> */
-
 .explain-operation {
-  /* margin: auto; */
   padding: 50px 0px;
 }
 .explain-operation__heading {
   margin: 10px 0px;
-  padding-left: 15px;
+  padding-left: 3%;
+}
+@media screen and (min-width: 768px) {
+  .explain-operation__heading {
+    padding-left: 8%;
+  }
 }
 .explain-operation__list {
   display: flex;
@@ -215,26 +375,36 @@ a {
   padding-bottom: 20px;
   margin: auto;
 }
+@media screen and (min-width: 768px) {
+  .explain-operation__list {
+    flex-direction: row;
+    justify-content: space-around;
+    width: 85%;
+  }
+}
+
 .explain-step {
   display: flex;
   align-items: center;
   height: 70px;
   gap: 4%;
   margin: 15px 0px;
-  background-color: #f6f6f6;
+  background-color: whitesmoke;
   border-radius: 20px;
   box-shadow: 0px 4px 15px 0px #d5d5d5;
   transition: background-color 300ms ease-in-out;
 }
-
-.explain-step:hover {
-  background-color: #f0eded;
-
-  & > .explain-step__icon {
-    color: #9356dc;
+@media screen and (min-width: 768px) {
+  .explain-step {
+    width: 30%;
   }
 }
-
+.explain-step:hover {
+  background-color: #ededed;
+}
+.explain-step:hover > .explain-step__icon {
+  color: #9356dc;
+}
 .explain-step__number {
   display: flex;
   align-items: center;
@@ -245,9 +415,8 @@ a {
   width: 24px;
   border-radius: 50px;
   background-color: #9356dc;
-  color: white;
+  color: #ffffff;
 }
-
 .explain-step__icon {
   display: flex;
   justify-content: center;
@@ -257,27 +426,36 @@ a {
   color: #7e7e7e;
   /* transition au survol vers le rose */
 }
-
 .explain-step__instruction {
   font-weight: 500;
 }
 
 /* <!-- RESTAURANTS-LIST --> */
-
 .list-restaurants {
   display: flex;
   flex-direction: column;
-  /* margin: auto; */
   padding: 50px 15px 50px 15px;
   background-color: #f6f6f6;
 }
-
+@media screen and (min-width: 768px) {
+  .list-restaurants {
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+}
 .list-restaurants__heading {
   padding-bottom: 20px;
 }
-
 .list-restaurants__container {
   width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .list-restaurants__container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 
 .restaurant-card {
@@ -288,25 +466,29 @@ a {
   margin-bottom: 5%;
   /* (espacement entre les cards) */
   border-radius: 15px;
-  background-color: white;
+  background-color: #ffffff;
   transition: 300ms, ease-in-out;
 }
-
 .restaurant-card:hover {
-  background-color: #f0eded;
+  background-color: #ededed;
 }
-
+@media screen and (min-width: 768px) {
+  .restaurant-card {
+    width: 46%;
+    margin: 0px;
+    margin-bottom: 5%;
+  }
+}
 .restaurant-card__image {
   position: relative;
 }
-
 .restaurant-card__image img {
   width: 100%;
   height: 175px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 15px 15px 0px 0px;
 }
-
 .restaurant-card__image--new {
   display: flex;
   align-items: center;
@@ -318,23 +500,19 @@ a {
   height: 29px;
   border-radius: 2px;
   font-size: 14px;
-  background-color: #99e2d0;
-  color: #008766;
+  background-color: #99E2D0;
+  color: #217460;
 }
-
 .restaurant-card__info {
   padding: 15px;
 }
-
 .restaurant-card__info__text {
   width: 90%;
 }
-
 .restaurant-card__info__text h3 {
   margin: 0px;
   font-size: 18px;
 }
-
 .restaurant-card__info__text p {
   font-weight: 300;
   font-size: 17px;
@@ -349,75 +527,22 @@ a {
   padding-bottom: 25px;
 }
 
-.button-like {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 24px;
-}
-
-.button-like i {
-  position: absolute;
-}
-
-.animheartsolid {
-  opacity: 0;
-  transition: all 500ms ease-in-out;
-}
-
-.animheartsolid:hover {
-  opacity: 1;
-  color: transparent;
-  background-image: linear-gradient(#9356dc, #ff79da);
-  background-clip: text;
-}
-
-**************************************
-
-/* FADE-IN-PAGE-MENU */
-
-.fade-in--0delay {
-  animation: fade-in 2s 0ms both;
-}
-
-.fade-in--1delay {
-  animation: fade-in 2s 500ms both;
-}
-
-.fade-in--2delay {
-  animation: fade-in 2s 1000ms both;
-}
-
-.fade-in--3delay {
-  animation: fade-in 2s 1500ms both;
-}
-
-@keyframes fade-in {
-  0% {
-    transform: translateY(50px);
-    opacity: 0;
-  }
-  75% {
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(0px);
-    animation-timing-function: ease-in-out;
-  }
-}
-**************************************
-
 /* <!-- PAGE-MENU--> */
-
 .page-restaurant-image {
   position: relative;
   width: 100%;
   height: 275px;
 }
+@media screen and (min-width: 1024px) {
+  .page-restaurant-image {
+    height: 400px;
+  }
+}
 .page-restaurant-image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .menu {
@@ -425,48 +550,51 @@ a {
   top: -20px;
   margin-bottom: -20px;
   padding-left: 10px;
-  background-color: #f6f6f6;
+  background-color: #f0f0f0;
   border-radius: 25px 25px 0px 0px;
+}
+@media screen and (min-width: 768px) {
+  .menu {
+    margin-left: 12%;
+    margin-right: 12%;
+  }
 }
 .menu__heading {
   display: flex;
   align-items: center;
 }
+@media screen and (min-width: 768px) {
+  .menu__heading {
+    text-align: center;
+  }
+}
 .menu__heading h2 {
   width: 85%;
-  padding-top: 20px;
-  font-family: "Shrikhand", cursive;
+  padding-top: 25px;
+  padding-left: 5px;
+  font-family: "Shrikhand";
 }
-.button-like {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 24px;
+.menu__button-order {
+  display: flex;
+  justify-content: center;
 }
-
-.button-like i {
-  position: absolute;
-}
-
-.animheartsolid {
-  opacity: 0;
-  transition: all 500ms ease-in-out;
-}
-
-.animheartsolid:hover {
-  opacity: 1;
-  color: transparent;
-  background-image: linear-gradient(#9356dc, #ff79da);
-  background-clip: text;
-}
-************************************************************
 
 /* <!-- LIST-CARD --> */
+.menu__course__container {
+  padding-left: 5px;
+  padding-right: 10px;
+}
 
 .course-list {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .course-list {
+    padding-left: 15%;
+    padding-right: 15%;
+  }
 }
 .course-list__heading {
   position: relative;
@@ -475,9 +603,7 @@ a {
   font-size: 18px;
   font-weight: 300;
   text-transform: uppercase;
-  /* majuscules */
 }
-
 .course-list__heading::after {
   display: block;
   position: absolute;
@@ -485,7 +611,7 @@ a {
   content: "";
   width: 40px;
   height: 4px;
-  background-color: #99e2d0;
+  background-color: #99E2D0;
 }
 
 .course-card {
@@ -495,20 +621,18 @@ a {
   width: 100%;
   margin: 10px 0px;
   padding: 0;
-  background-color: white;
+  background-color: #ffffff;
   border-radius: 15px;
   box-shadow: 0px 4px 15px 0px #d5d5d5;
   overflow: hidden;
   cursor: pointer;
 }
-
 .course-card:hover > .course-card__select-button {
   margin-right: 0px;
 }
 .course-card:hover > .course-card__select-button::after {
   transform: rotate(360deg);
 }
-
 .course-card__info {
   display: flex;
   justify-content: space-between;
@@ -555,89 +679,18 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: auto;
   width: 20%;
   margin-right: -20%;
   border-radius: 0px 15px 15px 0px;
-  background-color: #99e2d0;
-  transition: margin-right 800ms ease-in-out;
+  background-color: #99E2D0;
+  transition: margin-right 600ms ease-in-out;
 }
-
 .course-card__select-button::after {
   display: inline-block;
   font-weight: 900;
   font-size: 25px;
-  content: "Icon:check";
-  color: white;
-  transition: transform 800ms ease-in-out;
-}
-
-.menu__button-order {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.button-gradient {
-  border-radius: 50px;
-  color: white;
-  background: linear-gradient(#ff79da, #9356dc);
-  font-size: 16px;
-  margin: 30px 0px;
-  padding: 10px 50px;
-  height: 50px;
-  border: none;
-  box-shadow: 0px 4px 10px 0px rgb(166, 133, 133);
-  cursor: pointer;
-  transition: 300ms ease-in-out;
-}
-
-.button-gradient:hover {
-  opacity: 0.8;
-  box-shadow: 0px 4px 15px 2px rgb(166, 133, 133);
-}
-
-/* .button-gradient--long {
-  width: 50%;
-  min-width: 150px;
-  max-width: 250px;
-} */
-
-/* <!-- FOOTER --> */
-
-footer {
-  width: 100%;
-  padding: 16px;
-  background-color: #353535;
-  color: white;
-}
-
-.footer__heading {
-  margin: 0px 0px 10px 0px;
-  font-family: "Shrikhand";
-  font-size: 18px;
-}
-.footer__nav {
-  display: flex;
-  align-items: none;
-  font-size: 16px;
-}
-.footer__nav p {
-  padding-top: 5px;
-}
-
-.footer__nav__icons {
-  margin-right: 15px;
-  padding-top: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 11px;
-  height: 13px;
-  color: white;
-}
-.footer__info {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  font-size: 16px;
-  padding-top: 10px;
-}
+  content: "\f058";
+  color: #ffffff;
+  transition: transform 600ms ease-in-out;
+}/*# sourceMappingURL=style.css.map */
