--- a/sass/pages/_page-menu.scss
+++ b/sass/pages/_page-menu.scss
@@ -33,15 +33,17 @@
         display: flex;
         align-items: center;
 
-        @include tablet-responsive {
-            text-align: center;  
-        }
 
         & h2 {
             width: 85%;
             padding-top: 25px;
             padding-left: 5px;
             @include cursive-heading;
+
+            @include tablet-responsive {
+                width: 70%;
+                padding-left: 30%;  
+            }
             }
         
     }
@@ -49,7 +51,11 @@
     &__button-order {
         display: flex;
         justify-content: center;
+
+        @include tablet-responsive {
+        margin-left: -10%;
     }
+}
 }
 
 
@@ -58,10 +64,6 @@
 .menu__course__container {
     padding-left: 5px;
     padding-right: 10px;
-
-// @include desktop-responsive;@include tablet-responsive { 
-
-// }
 }
 
 .course-list {
