--- a/sass/pages/_page-menu.scss
+++ b/sass/pages/_page-menu.scss
@@ -32,29 +32,22 @@
     &__heading {
         display: flex;
         align-items: center;
+        gap: 20px;
 
-
+         @media screen and (min-width: 400px) {
+            justify-content: center;
+         }
+           
         & h2 {
-            width: 85%;
             padding-top: 25px;
             padding-left: 5px;
             @include cursive-heading;
-
-            @include tablet-responsive {
-                width: 70%;
-                padding-left: 30%;  
             }
-            }
-        
     }
 
     &__button-order {
         display: flex;
         justify-content: center;
-
-        @include tablet-responsive {
-        margin-left: -10%;
-    }
 }
 }
 
@@ -83,7 +76,7 @@
         font-size: 18px;
         font-weight: map-get($font-weight, light);
         text-transform: uppercase;
-        // écrit en majuscule
+        // majuscule
 
       &::after {
         display: block;
@@ -128,7 +121,6 @@
     // passages à la ligne automatique supprimés
     overflow: hidden;
     text-overflow: ellipsis;
-    // couper la fin des mots avec 3...
    }
 
    &__description {
@@ -159,7 +151,7 @@
     &__price {
         display: flex;
         align-items: flex-end;
-        width: 15%;
+        // width: 10%;
         padding: 5px;
         font-weight: map-get($font-weight, bold);
 
@@ -172,7 +164,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: auto;
         width: 20%;
         margin-right: -20%;
         border-radius: 0px 15px 15px 0px;
@@ -186,6 +177,7 @@
             content: "\f058";
             color: $white;
             transition: transform 600ms ease-in-out;
+            font-family: "Font Awesome 5 Free";
           }
     }
 }
