--- a/sass/utils/_animation.scss
+++ b/sass/utils/_animation.scss
@@ -65,3 +65,38 @@
 .fade-in--3delay {
   animation: fade-in 2s 1500ms both;
 }
+
+
+/* Heart fill */
+
+@keyframes heart-fill {
+  0% {
+      opacity: (0);
+      transform: scale(0.2)
+  }
+
+  15% {
+      opacity: (.25);
+  }
+
+  80% {
+      opacity: (1);
+      transform: scale(1);
+  }
+
+   85% {
+       opacity: (1);
+  transform: scale(1.1);
+   }
+
+   95% {
+       opacity: (1);
+       transform: scale(1.05);
+   }
+
+  100% {
+      opacity: (1);
+      transform: scale(1);
+  }
+}
+
