--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -374,3 +374,24 @@ footer nav ul {
   font-size: 12px;
   padding-right: 10px;
 }
+
+/* Styles de la modale */
+.modal {
+  display: none; /* Par défaut, la modale est cachée */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* transform: translate(-50%, -50%); */
+  width: 80%; /* Largeur de la modale */
+  max-width: 600px; /* Largeur maximale de la modale */
+  background-color: rgb(150, 71, 71);
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 9999;
+}
+
+.modal-content {
+  text-align: center;
+}
