--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -376,22 +376,69 @@ footer nav ul {
 }
 
 /* Styles de la modale */
-.modal {
-  display: none; /* Par défaut, la modale est cachée */
+
+.modale {
+  display: none;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  /* transform: translate(-50%, -50%); */
-  width: 80%; /* Largeur de la modale */
-  max-width: 600px; /* Largeur maximale de la modale */
-  background-color: rgb(150, 71, 71);
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+.modale-wrapper {
+  background: #fff;
+  width: 80%;
+  height: 80%;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  z-index: 9999;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: auto;
+}
+.modale-wrapper h2 {
+  margin-top: 0;
+}
+.modale-wrapper .gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 5px;
+  width: 50%;
+  margin-bottom: 20px;
 }
 
-.modal-content {
-  text-align: center;
+.modale-wrapper .gallery div {
+  flex-basis: calc(33.33% - 30px); /* Largeur de chaque élément */
+}
+.modale-wrapper .gallery img {
+  width: 50%;
+  height: 50%;
+  border-radius: 5px;
+}
+.modale-wrapper .separator {
+  width: 70%;
+  color: red;
+  margin: 20px 0;
+}
+.modale-wrapper .add-photo-btn {
+  padding: 10px 20px;
+  background-color: #1d6154;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.modale-wrapper .close-btn {
+  position: absolute;
+  color: black;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
