--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -133,11 +133,13 @@ body {
   margin: auto;
   font-family: "Work Sans";
   font-size: 14px;
+  background-color: rgb(249, 249, 240);
 }
 header {
   display: flex;
   justify-content: space-between;
   margin: 50px 0;
+  padding-top: 15px;
 }
 section {
   margin: 50px 0;
@@ -257,37 +259,45 @@ input[type="submit"] {
   border-radius: 60px;
 }
 
+footer {
+  background-color: white;
+  height: 7vh;
+}
 footer nav ul {
   display: flex;
   justify-content: flex-end;
   margin: 2em;
 }
-/* **FILTER** */
+
+/* ** Boutons pour les filtres ** */
 
 .categories-menu {
   display: flex;
   justify-content: center;
-  margin: 40px 0;
+  padding-right: 70px;
+  gap: 10px;
+}
+
+.categories-menu button {
+  margin: 35px 0;
+  padding: 1vh 3vh;
   font-family: "Syne";
-
+  background-color: rgb(249, 249, 240);
   color: #1d6154;
-  background-color: white;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 700;
+  border: solid 1px #1d6154;
+  border-radius: 20px;
   cursor: pointer;
-  transition: all 0.5s ease;
-}
-#all-categories {
-  border: 1px solid #1d6154;
-  border-radius: 25px;
 }
 
-#1 {
-  border: 1px solid #1d6154;
-  border-radius: 25px;
+.categories-menu button:hover {
+  transition: transform 0.3s ease;
+  transform: scale(1.05);
 }
 
-/* **LOGIN** */
+/* ** Login ** */
+
 .login {
   display: flex;
   flex-direction: column;
@@ -332,14 +342,18 @@ footer nav ul {
 
 /* Navbar dynamique */
 
+#navbarContainer {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+}
 .navbar {
   background-color: black;
   color: white;
   height: 5vh; /* la hauteur est donc de 5% de la hauteur de la page */
   justify-content: center;
   align-items: center;
-  position: fixed;
-  top: 0;
   width: 100%;
   z-index: 1000;
 }
@@ -350,8 +364,9 @@ footer nav ul {
 
 .navbar i {
   width: 40px; /* taille du logo  */
+  margin-right: 0;
   font-size: 14px;
-  margin-right: 10px;
+  margin-right: 0px;
   color: white;
 }
 
@@ -360,9 +375,9 @@ footer nav ul {
 .edit-mode-button {
   display: flex;
   align-items: center;
-  background-color: white;
+  background-color: rgb(249, 249, 240);
   color: black;
-  border: red, 2px;
+  border: none;
   margin-top: 2px;
   margin-left: 30px;
   padding: 5px 10px;
@@ -389,56 +404,88 @@ footer nav ul {
   align-items: center;
   z-index: 1000;
 }
+
 .modale-wrapper {
-  background: #fff;
-  width: 80%;
-  height: 80%;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: auto;
+  background: #fff;
+  width: 630px;
+  height: 688px;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 .modale-wrapper h2 {
-  margin-top: 0;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  font-family: inherit;
+  font-size: 26px;
+  font-weight: 400;
+  color: black;
 }
-.modale-wrapper .gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 5px;
-  width: 50%;
+.modale-wrapper .galleryMod {
+  display: grid;
+  grid-template-columns: 5fr 5fr 5fr 5fr 5fr;
+  row-gap: 20px;
+  column-gap: 0px;
+  width: 80%;
   margin-bottom: 20px;
 }
 
-.modale-wrapper .gallery div {
-  flex-basis: calc(33.33% - 30px); /* Largeur de chaque élément */
+.modale-wrapper .galleryMod div {
+  width: 100%;
+  margin-bottom: 10px;
+  text-align: center;
 }
-.modale-wrapper .gallery img {
-  width: 50%;
-  height: 50%;
-  border-radius: 5px;
+
+.modale-wrapper .galleryMod img {
+  width: 80%;
+  height: 100%;
 }
+
 .modale-wrapper .separator {
-  width: 70%;
-  color: red;
-  margin: 20px 0;
+  width: 80%;
+  border: solid 1px #b3b3b3;
+  margin: 45px 0;
 }
+
 .modale-wrapper .add-photo-btn {
-  padding: 10px 20px;
+  padding: 1vh 7vh;
   background-color: #1d6154;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
+  font-family: "Syne";
+  color: white;
+  font-size: 14px;
+
+  font-weight: 700;
+  border: solid 1px #1d6154;
+  border-radius: 25px;
   cursor: pointer;
 }
 .modale-wrapper .close-btn {
   position: absolute;
   color: black;
-  top: 10px;
-  right: 10px;
+  background-color: white;
+  border: none;
+  top: 15px;
+  right: 15px;
   cursor: pointer;
 }
+
+/* .delete-icon {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: rgba(255, 0, 0, 0.8);
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 14px;
+  cursor: pointer;
+  z-index: 10;
+} */
