--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -179,6 +179,11 @@ nav li {
 li:hover {
   color: #b1663c;
 }
+
+nav li a {
+  text-decoration: none;
+  color: inherit;
+}
 #introduction {
   display: flex;
   align-items: center;
@@ -204,7 +209,8 @@ li:hover {
 }
 #portfolio h2 {
   text-align: center;
-  margin-bottom: 1em;
+  padding-bottom: 0px;
+  padding-top: 60px;
 }
 .gallery {
   width: 100%;
@@ -225,7 +231,7 @@ li:hover {
   text-align: center;
 }
 #contact h2 {
-  margin-bottom: 20px;
+  margin-bottom: 0.5em;
 }
 #contact form {
   text-align: left;
@@ -274,7 +280,10 @@ footer nav ul {
 .categories-menu {
   display: flex;
   justify-content: center;
-  padding-right: 70px;
+
+  padding-left: 65px;
+  margin-top: 10px;
+  margin-bottom: 5px;
   gap: 10px;
 }
 
@@ -294,6 +303,8 @@ footer nav ul {
 .categories-menu button:hover {
   transition: transform 0.3s ease;
   transform: scale(1.05);
+  color: white;
+  background-color: #1d6154;
 }
 
 /* ** Login ** */
@@ -557,6 +568,13 @@ footer nav ul {
   position: absolute;
   top: 285px;
   font-size: 10px;
+}
+
+#photoPreview {
+  display: none;
+  max-width: 37%;
+  z-index: 2;
+  position: absolute;
 }
 
 .form-group-title {
